--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Products</h1>
 
+<!-- OLD TABLE REMOVED AFTER UPDATES
+
 <table>
   <thead>
     <tr>
@@ -18,13 +20,29 @@
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
+        <td><%= product.colour %></td>
+        <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+</table>  -->
+
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-6 col-lg-4">
+        <%= image_tag(product.image_url, class: "img-fluid") %>
+        <a href="#"><h1><%= product.name %></h1></a>
+        <p><%= product.description %></p>
+        <strong>$ <%= product.price %></strong>
+      </div><!-- /col -->
+    <% end %>
+  </div>
+</div>
+
 
 <br>
 
