--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,17 +32,9 @@
 
 <div class="container-fluid">
   <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-sm-6 col-lg-4">
-        <%= image_tag(product.image_url, class: "img-fluid") %>
-        <a href="#"><h1><%= product.name %></h1></a>
-        <p><%= product.description %></p>
-        <strong>$ <%= product.price %></strong>
-      </div><!-- /col -->
-    <% end %>
+    <%= render @products %>
   </div>
 </div>
-
 
 <br>
 
