--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,7 +35,11 @@
     <%= render @products %>
   </div>
 </div>
-
 <br>
-
-<%= link_to 'New Product', new_product_path %>
+<div class="container-fluid">
+  <div class="row">
+    <%= link_to 'New Product', new_product_path %>
+  </div>
+</div>
+<br>
+<br>
