--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,7 @@
 <div class="col-sm-6 col-lg-4">
   <%= image_tag(product.image_url, class: "img-fluid") %>
-  <a href="#"><h1><%= product.name %></h1></a>
+  <h1><%= link_to product.name, product %></h1>
   <p><%= product.description %></p>
-  <strong>$ <%= product.price %></strong>
+  <p><strong>Colour: <%= product.colour %></strong></p>
+  <p><strong>$ <%= product.price %></strong></p>
 </div><!-- /col -->
