--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <div class="container">
       <nav class="navbar">
         <ul>
@@ -27,11 +30,20 @@
           <li><%= link_to "Contact", simple_pages_contact_path %></li>
         </ul>
 
+        <ul class="navbar">
+          <% if user_signed_in? %>
+            <li><%= link_to('Logout', destroy_user_session_path, method: :delete ) %></li>
+          <% else %>
+            <li><%= link_to('Login', new_user_session_path ) %></li>
+          <% end %>
+        </ul>
+
         <%= form_with(url: products_path, method: 'get', local: true, html: {class: 'form-inline'}) do |form| %>
           <%= form.label :q, 'Search for:' %>
           <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-control form-control-sm mx-sm-2' %>
           <%= form.submit 'Search', class: 'btn btn-outline-danger btn-sm my-2 my-sm-0' %>
         <% end %>
+
       </nav>
     </div>
 
