--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,8 @@
       <%= yield %>
     </div>
 
-    <footer class="footer fixed-bottom">
+    <br>
+    <footer class="footer">
       <div class="container">
         &copy; 2018 Bike Berlin
       </div>
