--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,6 +32,7 @@
 
 <%= render 'new_comment' %>
 <%= render 'comments' %>
+<%= will_paginate(@comments, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm') %>
 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
