--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,6 +23,12 @@
     <%= @product.price %>
   </p>
 
+  <p>
+    <%= form_with(url: '/payments/create') do |form| %>
+      <%= render partial: "shared/stripe_checkout_button" %>
+    <% end %>
+  </p>
+
   <p class="d-inline">
     <strong>Average Rating:</strong>
     <div class="rated d-inline" data-score="<%= @product.average_rating %>"></div>
