--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,7 +32,7 @@
 
   <p class="d-inline">
     <strong>Average Rating:</strong>
-    <div class="rated d-inline" data-score="<%= @product.average_rating %>"></div>
+    <div class="rated d-inline" id="average-rating" data-score="<%= @product.average_rating %>"></div>
   </p>
 
 </div>
