--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
   <h4>Add a review:</h4>
-  <%= form_for([@product, @product.comments.build]) do |f| %>
+  <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
     <div class="field form-inline">
       <%= f.label :body, "Comments", class: 'col-md-1 col-sm-2' %><br>
       <%= f.text_area :body, class: 'col-md-3 col-sm-4 form-control form-control-sm' %>
