--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,6 +39,7 @@
 </div>
 
 <%= render 'new_comment' %>
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 <%= render 'comments' %>
 <%= will_paginate(@comments, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm') %>
 
