--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -2,4 +2,5 @@
   <% @comments.each do |comment| %>
     <%= render comment %>
   <% end %>
+  <%= will_paginate(@comments, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm') %>
 </div>
