--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true, html: {class: 'form-group'}) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+  <div class="field form-inline">
+    <%= form.label :first_name, class: 'col-md-1 col-sm-2' %>
+    <%= form.text_field :first_name, class: "form-control form-control-sm col-md-3 col-sm-4", placeholder: "First Name" %>
   </div>
 
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
+  <div class="field form-inline">
+    <%= form.label :last_name, class: 'col-md-1 col-sm-2' %>
+    <%= form.text_field :last_name, class: "form-control form-control-sm col-md-3 col-sm-4", placeholder: "Last Name" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Send", class: 'btn btn-outline-danger btn-sm my-2 my-sm-0' %>
   </div>
 <% end %>
